syntax = "proto3";

package public;

option go_package = "internal/proto";

enum FrameStatus {
    Archived = 0;
    Active = 1;
}

enum ContentType {
    Image = 0;
    Video = 1;
    Link = 2;
    Text = 3;
}

// Represents a user in the app
message AppUser {
    string access_token = 1;
    string refresh_token = 2;
}

// Represents a file in the app
message CreateFileRequest {
    string id = 1;                     // UUID
    string file_name = 2;              // File Name
    bytes content = 3;                 // File Data
}

message File {
    string id = 1;                     // UUID
    string file_name = 2;              // File Name
}

// Represents a frame in the app
message CreateFrameRequest {
    string title = 2;                  // Title
    string description = 3;            // Description
    string content = 5;                // Content
    FrameStatus frame_status = 6;      // Frame Status
    ContentType content_type = 7;      // Content Type
    CreateFileRequest file = 8;                     // File
}

message UpdateFrameRequest {
    string id = 1;                     // UUID
    string title = 2;                  // Title
    string description = 3;            // Description
    string content = 5;                // Content
    FrameStatus frame_status = 6;      // Frame Status
    ContentType content_type = 7;      // Content Type
    CreateFileRequest file = 8;                     // File
}

message Frame {
    string id = 1;                     // UUID
    string title = 2;                  // Title
    string description = 3;            // Description
    string content = 5;                // Content
    FrameStatus frame_status = 6;      // Frame Status
    ContentType content_type = 7;      // Content Type
    File file = 8;                     // File
}

// Requests and responses for CRUD operations
message GetByIdRequest {
    string id = 1;
}

message DeleteByIdRequest {
    string id = 1;
}

message EmptyResponse {}

// AppUser CRUD requests
message RegisterRequest {
    string email = 1;
    string password = 2;
    string name = 3;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message UpdateAppUserRequest {
    AppUser app_user = 1;
}

message ListAppUsersResponse {
    repeated AppUser app_users = 1;
}

message UpdateFileRequest {
    File file = 1;
}

message ListFilesResponse {
    repeated File files = 1;
}


message ListFramesResponse {
    repeated Frame frames = 1;
}

// gRPC Services
service AppUserService {
    rpc Register(RegisterRequest) returns (EmptyResponse);
    rpc Login(LoginRequest) returns (AppUser);
}

service FrameService {
    rpc CreateFrame(CreateFrameRequest) returns (Frame);
    rpc GetFrame(GetByIdRequest) returns (Frame);
    rpc UpdateFrame(UpdateFrameRequest) returns (Frame);
    rpc DeleteFrame(DeleteByIdRequest) returns (EmptyResponse);
    rpc ListFrames(EmptyResponse) returns (ListFramesResponse);
}
